A11Y: ensures focus on reaction button is clearly visible (#144)

--- a/assets/stylesheets/common/discourse-reactions.scss
+++ b/assets/stylesheets/common/discourse-reactions.scss
@@ -472,8 +472,8 @@ nav.post-controls .actions button {
 }
 
 nav.post-controls .actions .reaction-button:focus {
-  background: transparent;
-  color: var(--primary-low-mid);
+  background: var(--primary-low);
+  color: var(--primary);
 }
 
 nav.post-controls .actions .reaction-button {
